--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
             android:name=".Activity.MainMenu"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/app_name"
-            android:theme="@style/FullscreenTheme">
+            android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -34,7 +34,7 @@
             android:name=".Activity.QuizStage"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_quiz_stage"
-            android:theme="@style/FullscreenTheme" />
+            android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen" />
         <activity
             android:name=".Activity.Results"
             android:configChanges="orientation|keyboardHidden|screenSize"
