Added Launcher icon Updated layout Fixed all the bugs Added more suff

--- a/src/app/src/main/AndroidManifest.xml
+++ b/src/app/src/main/AndroidManifest.xml
@@ -26,12 +26,12 @@
             android:label="@string/title_activity_profile_creation"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"/>
         <activity
-            android:name=".Activity.QuizSetup"
+            android:name=".Activity.Setup"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_quiz_setup"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen"/>
         <activity
-            android:name=".Activity.QuizStage"
+            android:name=".Activity.Stage"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_quiz_stage"
             android:theme="@android:style/Theme.DeviceDefault.NoActionBar.Fullscreen" />
